--- a/plants/sass/main.scss
+++ b/plants/sass/main.scss
@@ -1,15 +1,20 @@
 //Base
-@import "base/fonts.scss";
 @import "base/normalize.scss";
-@import "base/base";
 @import "abstracts/constants";
+@import "base/fonts.scss";
+@import "base/base";
+
 
 //Layout
 @import "layout/background";
 @import "layout/wrapper";
 @import "layout/header";
+@import "layout/welcome";
+@import "layout/about";
+@import "layout/service.scss";
 
 //Components
 @import "components/navigation";
+@import "components/buttons.scss";
 
 
