--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -1,45 +1,3 @@
-/* inika-regular - latin */
-@font-face {
-  font-family: "Inika";
-  font-style: normal;
-  font-weight: 400;
-  src: local(""), url("../assets/fonts/inika-v21-latin-regular.woff2") format("woff2"), url("../assets/fonts/inika-v21-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* inika-700 - latin */
-@font-face {
-  font-family: "Inika";
-  font-style: normal;
-  font-weight: 700;
-  src: local(""), url("../assets/fonts/inika-v21-latin-700.woff2") format("woff2"), url("../assets/fonts/inika-v21-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* inter-300 - latin */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 300;
-  src: local(""), url("../assets/fonts/inter-v12-latin-300.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-300.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* inter-regular - latin */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  src: local(""), url("../assets/fonts/inter-v12-latin-regular.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* inter-500 - latin */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  src: local(""), url("../assets/fonts/inter-v12-latin-500.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* inter-700 - latin */
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 700;
-  src: local(""), url("../assets/fonts/inter-v12-latin-700.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -349,6 +307,48 @@ template {
   display: none;
 }
 
+/* inika-regular - latin */
+@font-face {
+  font-family: "Inika";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../assets/fonts/inika-v21-latin-regular.woff2") format("woff2"), url("../assets/fonts/inika-v21-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* inika-700 - latin */
+@font-face {
+  font-family: "Inika";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../assets/fonts/inika-v21-latin-700.woff2") format("woff2"), url("../assets/fonts/inika-v21-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* inter-300 - latin */
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 300;
+  src: local(""), url("../assets/fonts/inter-v12-latin-300.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-300.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* inter-regular - latin */
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../assets/fonts/inter-v12-latin-regular.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* inter-500 - latin */
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  src: local(""), url("../assets/fonts/inter-v12-latin-500.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* inter-700 - latin */
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../assets/fonts/inter-v12-latin-700.woff2") format("woff2"), url("../assets/fonts/inter-v12-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 html {
   font-size: 10px;
 }
@@ -356,6 +356,23 @@ html {
 body {
   font-size: 2rem;
   font-family: "Inter", "Verdana", sans-serif;
+}
+
+h1 {
+  font-family: Inter;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 50px;
+  color: #717171;
+}
+
+h2 {
+  font-family: "Inika";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 52px;
+  color: #499A18;
 }
 
 h4 {
@@ -373,6 +390,7 @@ a {
 
 .background-wrapper {
   background: #EDF2EC;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .wrapper {
@@ -412,6 +430,90 @@ a {
   color: #000000;
 }
 
+.welcome__content {
+  display: flex;
+  justify-content: space-between;
+  gap: 224px;
+  padding: 62px 0px 62px 0px;
+}
+
+.welcome__info {
+  width: 549px;
+}
+
+.welcome__info-text {
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 35px;
+  color: #636060;
+  padding: 42px 0px 48px 0px;
+}
+
+.welcome__background {
+  height: 407px;
+  width: 448px;
+  background: url("../assets/images/leafs_welcome.png");
+}
+
+.text-colored {
+  color: #499A18;
+}
+
+.about__content {
+  display: flex;
+  align-items: center;
+  gap: 153px;
+  padding: 93px 0px 8px 0px;
+}
+
+.about__info {
+  width: 60.5rem;
+}
+
+.about__info-title {
+  width: 46.3rem;
+}
+
+.about-image {
+  height: 479px;
+  width: 464px;
+  background-image: url("../assets/images/houseplant.jpg");
+}
+
+.heading-colored {
+  color: #E06733;
+}
+
+.about__info-text {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: #636060;
+}
+
+.service {
+  background: #EDF2EC;
+  padding: 40px 0px 121px 0px;
+}
+
+.service__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.service__content-title {
+  width: 30.6rem;
+}
+
+.service__content-buttons {
+  display: flex;
+  gap: 3.8rem;
+}
+
 .nav-items {
   display: flex;
 }
@@ -426,12 +528,45 @@ a {
 
 .nav-link {
   font-family: Inika;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 50px;
   letter-spacing: 0em;
   text-align: left;
   color: #010201;
+  transition: all 0.4s;
+}
+
+.nav-link:hover {
+  color: #E06733;
+}
+
+.button {
+  border: 2px solid #E06733;
+  border-radius: 10px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #E06733;
+  color: lightcyan;
+}
+
+.button_bordered {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  padding: 14px 27px;
+}
+
+.content-button {
+  width: 16.1rem;
+  padding: 12px 0px 12px 0px;
+  color: #E06733;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
