--- a/plants/sass/base/_normalize.scss
+++ b/plants/sass/base/_normalize.scss
@@ -347,3 +347,15 @@
   [hidden] {
     display: none;
   }
+
+  section, main, header, footer, article {
+    display: block;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  h1, h2, h3, p {
+    margin: 0;
+  }
