--- a/plants/sass/main.scss
+++ b/plants/sass/main.scss
@@ -1,7 +1,11 @@
-//Base
-@import "base/normalize.scss";
+//Abstracts
 @import "abstracts/constants";
-@import "base/fonts.scss";
+@import "abstracts/mixins";
+@import "abstracts/placeholders";
+
+//Base
+@import "base/normalize";
+@import "base/fonts";
 @import "base/base";
 
 
@@ -11,10 +15,13 @@
 @import "layout/header";
 @import "layout/welcome";
 @import "layout/about";
-@import "layout/service.scss";
+@import "layout/service";
+@import "layout/prices";
 
 //Components
 @import "components/navigation";
-@import "components/buttons.scss";
+@import "components/buttons";
+@import "components/columns";
+@import "components/forms";
 
 
