--- a/plants/sass/abstracts/_constants.scss
+++ b/plants/sass/abstracts/_constants.scss
@@ -5,8 +5,9 @@ $color-link: #010201;
 $color-heading: #717171;
 $color-text-primary: #636060;
 $color-text-additional: #000000;
+$color-background-form: #D6E7D2;
 
 
-$content-width: 1222px;
+$content-width: 1200px;
 $tablet-width: 768px;
 $mobile-width: 380px;
