--- a/plants/sass/components/_prices.scss
+++ b/plants/sass/components/_prices.scss
@@ -1,20 +1,28 @@
 .prices__wrapper {
     display: flex;
     justify-content: space-between;
-    padding: 4rem 0rem 11.5rem;
+    padding: 3rem 0rem 9rem;
     
+}
+
+.prices__rates {
+    padding-left: 55px;
 }
 
 .prices__contacts {
     @include column-flex();
-    max-width: 45.2rem;
     text-align: right;
+    //padding-right: 35px;
+    
 }
 
 .prices__title {
     font-family: "Inter", "Verdana", sans-serif;
-    @include font(4rem, normal, 700, 4.8rem);
+    max-width: 45.2rem;
+    @include font(3.6rem, normal, 700, 4.8rem);
     color: $color-text-additional;
+    padding-right: 40px;
+    
 
     .text-colored {
     @extend %text-colored;
@@ -23,5 +31,10 @@
 }
 
 .prices__contacts-info {
-    margin-left: 29rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 25rem;
+    
 }
+
