--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -1,16 +1,16 @@
-.arrow:hover, .button, .nav-items .nav-item .nav-link {
+.nav-link, .rss-link, .student-link, .arrow:hover, .dropdown_wrapper, .button {
   transition: all 0.3s ease-in-out;
 }
 
-.button, .logo-line, li a {
+.footer__link, .footer__contact, .select-wrapper .arrow-select, .select-wrapper .select-form, .dropdown_wrapper, .button, .logo-line, a {
   cursor: pointer;
 }
 
-.nav-items .nav-item .nav-link, .logo-line .logo-text, h2 {
+.nav-link, .button_primary, .logo-line .logo-text, h2 {
   font-family: "Inika";
 }
 
-.prices__title .text-colored, .welcome__info .text-colored {
+.prices__title .text-colored, .welcome__info-title .text-colored {
   color: #499A18;
 }
 
@@ -379,10 +379,11 @@ h1, h2, h3, p {
 }
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
-  font-size: 2rem;
   font-family: "Inter", "Verdana", sans-serif;
 }
 
@@ -409,38 +410,30 @@ h4 {
 li {
   list-style: none;
 }
-li a {
+
+a {
   text-decoration: none;
 }
 
-.background-wrapper {
-  background: #EDF2EC;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+img {
+  margin: 0;
 }
 
 .wrapper {
-  max-width: 1222px;
+  max-width: 1200px;
   margin: auto;
-}
-
-.header {
-  padding: 5.2rem 0rem 6.2rem 0rem;
-}
-.header .header__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .logo-line {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
+  margin-right: 10px;
 }
 .logo-line .logo-text {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 400;
-  line-height: 2.1rem;
+  line-height: 2rem;
   font-style: normal;
   color: #000000;
 }
@@ -449,132 +442,6 @@ li a {
   width: 2rem;
   height: 2rem;
   background-image: url("../assets/icons/logo.svg");
-}
-
-.welcome__content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 22.4rem;
-  padding: 6.2rem 0rem;
-}
-
-.welcome__background {
-  height: 40.7rem;
-  width: 44.8rem;
-  background: url("../assets/images/leafs_welcome.png");
-}
-
-.welcome__info {
-  max-width: 54.9rem;
-}
-.welcome__info-text {
-  font-size: 2rem;
-  font-weight: 400;
-  line-height: 3.5rem;
-  font-style: normal;
-  color: #636060;
-  padding: 4.2rem 0rem 4.8rem;
-}
-
-.about__content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 15.3rem;
-  padding: 9.3rem 0rem 0.8rem;
-}
-
-.about__info {
-  max-width: 60.5rem;
-}
-.about__info .about__info-title {
-  max-width: 46.3rem;
-}
-.about__info .about__info-title .heading-colored {
-  color: #E06733;
-}
-.about__info .about__info-text {
-  font-size: 2rem;
-  font-weight: 400;
-  line-height: 3rem;
-  font-style: normal;
-  color: #636060;
-}
-
-.about-image {
-  height: 47.9rem;
-  width: 46.4rem;
-  background-image: url("../assets/images/houseplant.jpg");
-}
-
-.service {
-  background: #EDF2EC;
-  padding: 4rem 0rem 12.1rem;
-}
-
-.service__content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.service__content .service__content-title {
-  max-width: 30.6rem;
-}
-.service__content .service__content-buttons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 3.8rem;
-}
-
-.prices__wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding: 4rem 0rem 11.5rem;
-}
-
-.prices__contacts {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-  max-width: 45.2rem;
-  text-align: right;
-}
-
-.prices__title {
-  font-family: "Inter", "Verdana", sans-serif;
-  font-size: 4rem;
-  font-weight: 700;
-  line-height: 4.8rem;
-  font-style: normal;
-  color: #000000;
-}
-.prices__contacts-info {
-  margin-left: 29rem;
-}
-
-.nav-items {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.nav-items .nav-item {
-  padding-right: 4.6rem;
-}
-.nav-items .nav-item:last-child {
-  padding-right: 0px;
-}
-.nav-items .nav-item .nav-link {
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 5rem;
-  font-style: normal;
-  color: #010201;
-}
-.nav-items .nav-item .nav-link:hover {
-  color: #E06733;
 }
 
 .button {
@@ -587,72 +454,28 @@ li a {
 }
 .button_bordered {
   font-family: "Inter";
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 400;
   line-height: 2rem;
   font-style: normal;
-  padding: 1.4rem 2.7rem;
+  text-align: center;
+  padding: 6px 19px 8px 18px;
+  margin-right: 4px;
 }
 .button_primary {
-  width: 16.1rem;
-  padding: 1.2rem 0rem;
+  width: 15rem;
+  padding: 1rem 0rem;
   color: #E06733;
   text-align: center;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 26px;
+  font-style: normal;
 }
 .button_contacted {
-  margin: 3.8rem 0rem 3.9rem 0rem;
+  margin: 3.5rem 0rem 2.2rem 0rem;
+  padding: 10px 0px 7px;
   background-color: white;
-}
-
-.service__table {
-  padding: 9rem 0rem 0rem;
-}
-
-.layout-3-column {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  row-gap: 55px;
-}
-.layout-3-column > * {
-  flex-basis: 31%;
-}
-
-.column__content-block {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.column__content-image {
-  border-radius: 23px 23px 0px 0px;
-  object-fit: cover;
-}
-
-.column__content-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-  border-radius: 0px 0px 23px 23px;
-  border: 1px solid #E3E1D5;
-  padding: 1rem 3.1rem 3.6rem;
-  gap: 1rem;
-}
-.column__content-info .column__content-subtitle {
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 2rem;
-  font-style: normal;
-  color: #E06733;
-}
-.column__content-info .column__content-text {
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 2rem;
-  font-style: normal;
-  color: #717171;
 }
 
 details > summary {
@@ -663,10 +486,10 @@ details > summary {
   display: flex;
   flex-direction: column;
   margin-top: 6rem;
-  padding: 3.4rem 4.1rem;
+  padding: 2.5rem 4rem 3rem 3rem;
   border-radius: 20px;
   border: 1px solid #E3E1D5;
-  gap: 3.2rem;
+  gap: 2.5rem;
 }
 
 .dropdown_wrapper {
@@ -674,9 +497,12 @@ details > summary {
   align-items: center;
   justify-content: space-between;
   max-width: 25rem;
-  padding: 1.6rem 11rem 1.6rem 4rem;
+  padding: 1.5rem 3rem 1.3rem 2rem;
   background: #EDF2EC;
   border-radius: 20px;
+}
+.dropdown_wrapper:hover {
+  background-color: #D6E7D2;
 }
 
 .dropdown__item {
@@ -685,12 +511,12 @@ details > summary {
 }
 .dropdown__item .dropdown_info {
   width: 100px;
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: 700;
   line-height: 2rem;
   font-style: normal;
   color: #000000;
-  text-align: left;
+  text-align: center;
 }
 
 .arrow {
@@ -716,6 +542,399 @@ details > summary {
 }
 .arrow:hover {
   transform: rotate(-180deg);
+}
+
+.select-wrapper {
+  margin-top: 3.4rem;
+  display: flex;
+  align-items: center;
+  background-color: #D6E7D2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.select-wrapper .select-form {
+  appearance: none;
+  outline: none;
+  border: none;
+  border-radius: 0px;
+  background-color: #D6E7D2;
+  color: #717171;
+  padding: 5px 190px 5px 20px;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 4rem;
+  font-style: normal;
+}
+.select-wrapper .select-form option {
+  width: 100%;
+}
+.select-wrapper .arrow-select {
+  display: inline-flex;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  background-color: rgb(189, 188, 188);
+  border-radius: 50%;
+  margin-right: 17px;
+}
+.select-wrapper .arrow-select::before {
+  content: "";
+  width: 4px;
+  height: 4px;
+  border-top: 2px solid #fff;
+  border-right: 2px solid #fff;
+  display: inline-block;
+  position: absolute;
+  top: 5px;
+  left: 7px;
+  transform: rotate(135deg);
+}
+
+.background-wrapper {
+  background: #EDF2EC;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.header {
+  padding: 2.9rem 0rem 6.2rem 2rem;
+}
+.header .header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 520px;
+}
+
+.service__table {
+  padding: 6.8rem 0rem 0rem 20px;
+}
+
+.layout-3-column {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 45px;
+}
+.layout-3-column > * {
+  flex-basis: 33%;
+}
+
+.column__content-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.column__content-image {
+  width: 305px;
+  height: 320px;
+  border-radius: 23px 23px 0px 0px;
+  object-fit: cover;
+}
+
+.content-block-left {
+  padding-right: 64px;
+}
+
+.content-block-right {
+  padding-left: 54px;
+}
+
+.column__content-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  border-radius: 0px 0px 23px 23px;
+  border: 1px solid #E3E1D5;
+  padding: 5px 3.1rem 3.6rem;
+  gap: 1rem;
+}
+.column__content-info .column__content-subtitle {
+  font-size: 1.9rem;
+  font-weight: 700;
+  line-height: 2rem;
+  font-style: normal;
+  color: #E06733;
+  padding-bottom: 4px;
+}
+.column__content-info .column__content-text {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.7rem;
+  font-style: normal;
+  color: #717171;
+}
+
+.footer__wrapper {
+  padding: 3.5rem 1.5rem 4rem 2rem;
+}
+
+.footer__items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__student-info {
+  font-size: 1.7rem;
+  font-weight: 400;
+  line-height: 5rem;
+  font-style: normal;
+  color: black;
+}
+
+.students-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 0;
+}
+
+.rss-link, .student-link {
+  color: black;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 4.9rem;
+  font-style: normal;
+}
+.rss-link:hover, .student-link:hover {
+  color: #E06733;
+}
+
+.rss-link {
+  padding-left: 5px;
+}
+
+.footer__contacts {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+  padding: 0;
+  padding-right: 15px;
+}
+
+.footer__contact {
+  width: 3.2rem;
+  height: 3.2rem;
+}
+
+.insta-icon {
+  background: url("../assets/icons/instagram.svg");
+}
+
+.facebook-icon {
+  background: url("../assets/icons/facebook.svg");
+}
+
+.twitter-icon {
+  background: url("../assets/icons/twitter.svg");
+}
+
+.pinterest-icon {
+  background: url("../assets/icons/pinterest.svg");
+}
+
+.header__nav {
+  max-width: 452px;
+}
+
+.nav-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px;
+  padding-top: 4px;
+  padding-left: 20px;
+}
+
+.nav-item {
+  padding-right: 3.8rem;
+}
+.nav-item:last-child {
+  padding-right: 0px;
+}
+
+.nav-link {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 3.8rem;
+  font-style: normal;
+  color: #010201;
+}
+.nav-link:hover {
+  color: #E06733;
+}
+
+.welcome__content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0px 0px 40px 20px;
+}
+.welcome__content > * {
+  flex-basis: 45%;
+}
+
+.welcome__background {
+  height: 407.3px;
+  width: 448.8px;
+  background: url("../assets/images/leafs_welcome.png");
+  background-repeat: no-repeat;
+  margin-left: 25px;
+}
+
+.welcome__info {
+  max-width: 54.9rem;
+  padding: 65px 0px 20px 0px;
+}
+
+.welcome__info-title {
+  margin-top: -10px;
+  font-size: 4.1rem;
+  padding-bottom: 29px;
+}
+.welcome__info-text {
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 3.3rem;
+  font-style: normal;
+  color: #636060;
+  max-width: 490px;
+  padding-bottom: 45px;
+}
+
+.about__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 76px 0px 60px 0px;
+}
+
+.about__info {
+  max-width: 59.5rem;
+  padding: 0px 0px 0px 58px;
+}
+
+.about__info-title {
+  max-width: 46.3rem;
+  margin-top: -10px;
+  padding-bottom: 23px;
+  font-size: 3.6rem;
+  line-height: 4.9rem;
+}
+.about__info-title .heading-colored {
+  color: #E06733;
+}
+
+.about__info-text {
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 27px;
+  font-style: normal;
+  color: #636060;
+  padding-top: 10px;
+  text-align: left;
+}
+
+.about-image {
+  height: 47.9rem;
+  width: 46.4rem;
+  background-image: url("../assets/images/houseplant.jpg");
+  background-repeat: no-repeat;
+}
+
+.service {
+  background: #EDF2EC;
+  padding: 3.5rem 9rem 10.5rem;
+}
+
+.service__content {
+  display: flex;
+  align-items: center;
+}
+.service__content .service__content-title {
+  max-width: 30.6rem;
+  font-size: 3.6rem;
+  line-height: 4.9rem;
+  padding-left: 10px;
+}
+.service__content .service__content-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2.9rem;
+  padding-left: 110px;
+}
+
+.prices__wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 3rem 0rem 9rem;
+}
+
+.prices__rates {
+  padding-left: 55px;
+}
+
+.prices__contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: right;
+}
+
+.prices__title {
+  font-family: "Inter", "Verdana", sans-serif;
+  max-width: 45.2rem;
+  font-size: 3.6rem;
+  font-weight: 700;
+  line-height: 4.8rem;
+  font-style: normal;
+  color: #000000;
+  padding-right: 40px;
+}
+.prices__contacts-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 25rem;
+}
+
+.contacts {
+  background: #EDF2EC;
+}
+
+.contacts__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  padding: 53px 0px 0px 43px;
+}
+
+.contacts-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 4.5rem;
+  margin-left: 6rem;
+}
+
+.contacts-title {
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 5.2rem;
+  font-style: normal;
+  margin-left: 80px;
+}
+
+.contacts__image {
+  width: 390px;
+  height: 445px;
 }
 
 /*# sourceMappingURL=style.css.map */
