feat: add burger

--- a/plants/sass/base/_wrapper.scss
+++ b/plants/sass/base/_wrapper.scss
@@ -1,4 +1,7 @@
 .wrapper {
-    max-width: $content-width;
-    margin: auto;
+  max-width: $content-width;
+  margin: auto;
+  @include media-content {
+    padding: 0 50px;
+  }
 }
