--- a/plants/sass/layout/_columns.scss
+++ b/plants/sass/layout/_columns.scss
@@ -1,10 +1,14 @@
 .service__table {
     padding: 6.8rem 0rem 0rem 20px;
+    @include media-laptop {
+        padding-left: 0;
+    }
 }
 
 .layout-3-column {
     @include columns($width: 33%);
     row-gap: 45px;
+    
 }
 
 
@@ -19,14 +23,25 @@
     height: 320px;
     border-radius: 23px 23px 0px 0px;
     object-fit: cover;
+    @include media-laptop {
+        width: 290px;
+    }
 }
 
 .content-block-left {
  padding-right: 64px;
+
+ @include media-laptop {
+    padding-right: 0;
+ }
 }
 
 .content-block-right {
  padding-left: 54px;
+
+ @include media-laptop {
+    padding-left: 0;
+ }
 }
 
 .column__content-info {
