--- a/plants/sass/abstracts/_constants.scss
+++ b/plants/sass/abstracts/_constants.scss
@@ -7,7 +7,7 @@ $color-text-primary: #636060;
 $color-text-additional: #000000;
 $color-background-form: #D6E7D2;
 
-
+$laptop-width: 1435px;
 $content-width: 1200px;
 $tablet-width: 768px;
 $mobile-width: 380px;
