--- a/plants/sass/main.scss
+++ b/plants/sass/main.scss
@@ -11,6 +11,7 @@
 @import "base/logo";
 @import "base/buttons";
 @import "base/forms";
+@import "base/hamburger";
 
 //Layout
 @import "layout/background";
