--- a/plants/sass/layout/_columns.scss
+++ b/plants/sass/layout/_columns.scss
@@ -3,11 +3,21 @@
     @include media-laptop {
         padding-left: 0;
     }
+
+    @include media-content {
+        padding: 3.7rem 5px 65px 0;
+       
+    }
 }
 
 .layout-3-column {
     @include columns($width: 33%);
-    row-gap: 45px;
+    row-gap: 38px;
+
+    @include media-content {
+        @include columns($width: 31%);
+        
+    }
     
 }
 
@@ -25,6 +35,11 @@
     object-fit: cover;
     @include media-laptop {
         width: 290px;
+    }
+
+    @include media-content {
+        width: 280px;
+        height: 350px;
     }
 }
 
@@ -51,18 +66,34 @@
     padding: 5px 3.1rem 3.6rem;
     gap: 1rem;
 
-    .column__content-subtitle {
-        @include font (1.9rem, normal, 700, 2rem);
-        color: $color-brand;
-        padding-bottom: 4px;
-       
+    @include media-content {
+        padding: 7px 3.4rem 2.4rem;
     }
 
-    .column__content-text {
-        @include font(1.4rem, normal, 400, 1.7rem);
-        color: $color-heading;
-    }
+   
 }
 
 
+.column__content-subtitle {
+    @include font (1.9rem, normal, 700, 2rem);
+    color: $color-brand;
+    padding-bottom: 4px;
 
+    @include media-content {
+        font-size: 2rem;
+        margin-right: 10px;
+        padding-bottom: 3px;
+    }
+   
+}
+
+.column__content-text {
+    @include font(1.4rem, normal, 400, 1.7rem);
+    color: $color-heading;
+
+    @include media-content {
+        font-size: 1.6rem;
+        text-align: center;
+        max-width: 210px;
+    }
+}
