--- a/plants/sass/components/_about.scss
+++ b/plants/sass/components/_about.scss
@@ -1,11 +1,24 @@
 .about__content {
   @include flex();
-  padding: 76px 0px 60px 0px;
+  padding: 74px 0px 60px 0px;
+
+  @include media-content {
+    flex-direction: column;
+    max-height: 780px;
+    padding: 40px 0 0;
+  }
 }
 
 .about__info {
   max-width: 59.5rem;
   padding: 0px 0px 0px 58px;
+
+  @include media-content {
+    max-width: none;
+    padding: 0;
+    text-align: center;
+    position: relative;
+  }
 
 
 
@@ -14,14 +27,21 @@
 
 .about__info-title {
   max-width: 46.3rem;
-  //padding-top: 25px;
   margin-top: -10px;
   padding-bottom: 23px;
   font-size: 3.6rem;
   line-height: 4.9rem;
+  
 
   .heading-colored {
     color: $color-brand;
+  }
+
+  @include media-content {
+    margin-top: -5px;
+    margin-left: 100px ;
+    font-size: 3.5rem;
+    position: absolute;
   }
 }
 
@@ -30,6 +50,12 @@
   color: $color-text-primary;
   padding-top: 10px;
   text-align: left;
+
+  @include media-content {
+    padding-top: 140px;
+    font-size: 2rem;
+    line-height: 30px;
+  }
 }
 
 .about-image {
@@ -37,4 +63,11 @@
   width: 46.4rem;
   background-image: url("../assets/images/houseplant.jpg");
   background-repeat: no-repeat;
+
+  @include media-content {
+    background: url("../assets/images/houseplant_tablet.png");
+    background-repeat: no-repeat;
+    margin-top: 70px;
+    margin-left: 210px;
+  }
 }
