--- a/plants/sass/components/_navigation.scss
+++ b/plants/sass/components/_navigation.scss
@@ -1,19 +1,26 @@
 .header__nav {
    max-width: 452px;
+   @include media-content {
+    max-width: none;
+   }
+
+   @include media-tablet {
+    display: none;
+   }
 }
 
 
 .nav-items {
     @include flex();
-    //max-width: 45.6rem;
     padding: 0px;
     padding-top: 4px;
     padding-left: 20px;
-    //padding-left: 550px;
+    @include media-content {
+        padding-left: 0;
+        padding-right: 10px;
+       }
    
    
-    
-
 }
 
 .nav-item {
@@ -23,6 +30,10 @@
     &:last-child {
         padding-right: 0px;
     }
+
+    @include media-content {
+        padding-right: 5rem;
+       }
 
 }
 
