--- a/plants/sass/components/_prices.scss
+++ b/plants/sass/components/_prices.scss
@@ -2,11 +2,19 @@
     display: flex;
     justify-content: space-between;
     padding: 3rem 0rem 9rem;
+
+    @include media-content {
+        padding: 3.5rem 0 8.8rem;
+    }
     
 }
 
 .prices__rates {
     padding-left: 55px;
+
+    @include media-content {
+        padding: 0;
+    }
 }
 
 .prices__contacts {
@@ -28,13 +36,32 @@
     @extend %text-colored;
    }
 
+   @include media-content {
+    padding-right: 0;
+    padding-left: 15px;
+   }
+
+}
+
+.prices__title_subtitle {
+    @include media-content {
+        font-size:  25px;
+        line-height: 35px;
+        padding-top: 105px;
+        padding-left: 0;
+        margin-left: 10px;
+        max-width: 296px;
+    }
 }
 
 .prices__contacts-info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 25rem;
+    margin-left:60rem;
     
+    @include media-content {
+        margin-left: 15rem;
+    }
 }
 
