--- a/plants/sass/components/_service.scss
+++ b/plants/sass/components/_service.scss
@@ -1,25 +1,49 @@
 .service {
   background: $color-background;
   padding: 3.5rem 9rem 10.5rem;
+
+  @include media-content {
+    padding: 58px 0 0;
+  }
 }
 
 .service__content {
   display: flex;
   align-items: center;
 
-  .service__content-title {
-    max-width: 30.6rem;
-    font-size: 3.6rem;
-    line-height: 4.9rem;
-    padding-left: 10px;
-    //padding: 5px 5px 0px 0px;
+  @include media-content {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
-  .service__content-buttons {
-    @include flex();
-    gap: 2.9rem;
-    padding-left: 110px;
+}
+
+.service__content-title {
+  max-width: 30.6rem;
+  font-size: 3.6rem;
+  line-height: 4.9rem;
+  padding-left: 10px;
+  
+
+  @include media-content {
+    font-size: 3.5rem;
+    line-height: 4.8rem;
+    padding: 0;
+    margin-bottom: 40px;
   }
+}
+
+
+.service__content-buttons {
+  @include flex();
+  gap: 2.9rem;
+  padding-left: 110px;
+
+  @include media-content {
+    padding: 0;
+    gap: 3.8rem;
+  }
+
   
 }
 
