--- a/plants/sass/components/_welcome.scss
+++ b/plants/sass/components/_welcome.scss
@@ -2,6 +2,15 @@
   @include columns($width:45%);
   padding: 0px 0px 40px 20px;
 
+  @include media-content {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 50px;
+    padding: 25px 0 0;
+    max-height: 420px;
+    position: relative;
+  }
+
 
 }
 
@@ -12,11 +21,25 @@
   background-repeat: no-repeat;
   margin-left: 25px;
 
+  @include media-content {
+    background: url("../assets/images/leafs_welcome_tablet.png");
+    background-repeat: no-repeat;
+    margin-left: 0;
+    
+  }
+
 }
 
 .welcome__info {
   max-width: 54.9rem;
   padding: 65px 0px 20px 0px;
+
+  @include media-content {
+    max-width: none;
+    padding: 15px 0 0;
+
+    //padding-right: 10px;
+  }
   
 
   
@@ -27,6 +50,13 @@
     margin-top: -10px;
     font-size: 4.1rem;
     padding-bottom: 29px;
+
+    @include media-content {
+      max-width: 341px;
+      font-size: 3.5rem;
+      margin: 0;
+      position: absolute;
+    }
     
 
   .text-colored {
@@ -39,6 +69,14 @@
   color: $color-text-primary;
   max-width: 490px;
   padding-bottom: 45px;
+
+  @include media-content {
+    max-width: 340px;
+    padding-top: 130px;
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+    position: absolute;
+  }
 }
 
 
