--- a/plants/sass/layout/_footer.scss
+++ b/plants/sass/layout/_footer.scss
@@ -1,11 +1,20 @@
 .footer__wrapper {
     padding: 3.5rem 1.5rem 4rem 2rem;
+
+    @include media-content {
+        padding: 18px 0 0;
+    }
 }
 
 .footer__items {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include media-content {
+        flex-direction: column;
+       
+    }
 }
 
 
@@ -13,6 +22,10 @@
 .footer__student-info {
     @include font (1.7rem, normal, 400, 5rem);
     color: black;
+
+    @include media-content {
+        font-size: 2rem;
+    }
     
 }
 
@@ -20,6 +33,12 @@
     @include flex();
     gap: 20px;
     margin: 0;
+
+    @include media-content {
+        padding: 0;
+        padding-right: 5px;
+        gap: 23px;
+    }
 
     
 }
@@ -31,10 +50,25 @@
     &:hover {
         color: $color-brand;
     }
+
+    @include media-content {
+        font-size: 2rem;
+    }
 }
+
+.footer__school-link {
+    margin-top: -10px;
+    padding: 0 5px 0 0;
+}
+
+
 
 .rss-link {
     padding-left: 5px;
+
+    @include media-content {
+        padding-left: 0;
+    }
 }
 
 .footer__contacts {
@@ -42,6 +76,12 @@
     gap: 15px;
     padding: 0;
     padding-right: 15px;
+
+    @include media-content {
+        padding-top: 3px;
+        padding-right: 5px;
+        gap: 20px;
+    }
 }
 
 
