--- a/plants/sass/layout/_header.scss
+++ b/plants/sass/layout/_header.scss
@@ -1,5 +1,9 @@
 .header {
     padding: 2.9rem 0rem 6.2rem 2rem;
+
+    @include media-content {
+        padding: 2.9rem 0;
+    }
     
 }
 
@@ -10,6 +14,7 @@
     gap: 520px;
 
     @include media-content {
+        justify-content:space-between;
         gap: 0;
     }
 }
