--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -1,12 +1,12 @@
-.nav-link, .rss-link, .student-link, .arrow:hover, .dropdown_wrapper, .button {
+.nav-link, .rss-link, .student-link, .select__form .arrow-select:hover, .arrow:hover, .dropdown_wrapper, .button {
   transition: all 0.3s ease-in-out;
 }
 
-.footer__link, .footer__contact, .header-burger, .select-wrapper .arrow-select, .select-wrapper .select-form, .dropdown_wrapper, .button, .logo-line, a {
+.footer__link, .footer__contact, .header-burger, .select__form .arrow-select, .select__form, .dropdown_wrapper, .button, .logo-line, a {
   cursor: pointer;
 }
 
-.nav-link, .button_primary, .logo-line .logo-text, h2 {
+.nav-link, .button_primary, .logo-text, h2 {
   font-family: "Inika";
 }
 
@@ -425,7 +425,7 @@ img {
 }
 @media (max-width: 1200px) {
   .wrapper {
-    padding: 0 50px;
+    padding: 0 40px;
   }
 }
 
@@ -433,9 +433,9 @@ img {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  margin-right: 10px;
 }
-.logo-line .logo-text {
+
+.logo-text {
   font-size: 1.5rem;
   font-weight: 400;
   line-height: 2rem;
@@ -467,6 +467,12 @@ img {
   padding: 6px 19px 8px 18px;
   margin-right: 4px;
 }
+@media (max-width: 1200px) {
+  .button_bordered {
+    margin-top: 263px;
+    padding: 11px 27px 10px;
+  }
+}
 .button_primary {
   width: 15rem;
   padding: 1rem 0rem;
@@ -477,10 +483,23 @@ img {
   line-height: 26px;
   font-style: normal;
 }
+@media (max-width: 1200px) {
+  .button_primary {
+    width: 16.2rem;
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
 .button_contacted {
   margin: 3.5rem 0rem 2.2rem 0rem;
   padding: 10px 0px 7px;
   background-color: white;
+}
+@media (max-width: 1200px) {
+  .button_contacted {
+    margin-top: 2.8rem;
+    padding-top: 9px;
+  }
 }
 
 details > summary {
@@ -490,11 +509,19 @@ details > summary {
 .dropdown {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: 6rem;
   padding: 2.5rem 4rem 3rem 3rem;
   border-radius: 20px;
-  border: 1px solid #E3E1D5;
+  border: 1px solid #e3e1d5;
   gap: 2.5rem;
+}
+@media (max-width: 1200px) {
+  .dropdown {
+    margin-top: 5.5rem;
+    padding: 4rem 4rem 4.5rem 4rem;
+    gap: 2.9rem;
+  }
 }
 
 .dropdown_wrapper {
@@ -509,12 +536,25 @@ details > summary {
 .dropdown_wrapper:hover {
   background-color: #D6E7D2;
 }
+@media (max-width: 1200px) {
+  .dropdown_wrapper {
+    max-width: none;
+    padding: 1.3rem 4rem 1.4rem 2.1rem;
+  }
+}
 
 .dropdown__item {
   display: flex;
   gap: 55px;
 }
-.dropdown__item .dropdown_info {
+@media (max-width: 1200px) {
+  .dropdown__item {
+    align-items: center;
+    gap: 70px;
+  }
+}
+
+.dropdown_info {
   width: 100px;
   font-size: 1.7rem;
   font-weight: 700;
@@ -522,6 +562,12 @@ details > summary {
   font-style: normal;
   color: #000000;
   text-align: center;
+}
+@media (max-width: 1200px) {
+  .dropdown_info {
+    font-size: 2rem;
+    text-align: center;
+  }
 }
 
 .arrow {
@@ -549,39 +595,40 @@ details > summary {
   transform: rotate(-180deg);
 }
 
-.select-wrapper {
+.select__wrapper {
   margin-top: 3.4rem;
+  margin-right: 5px;
   display: flex;
-  align-items: center;
   background-color: #D6E7D2;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  max-width: 450px;
+  padding: 5px 430px 5px 20px;
 }
-.select-wrapper .select-form {
-  appearance: none;
-  outline: none;
-  border: none;
+
+.select__form {
   border-radius: 0px;
   background-color: #D6E7D2;
   color: #717171;
-  padding: 5px 190px 5px 20px;
   font-size: 2rem;
   font-weight: 400;
   line-height: 4rem;
   font-style: normal;
 }
-.select-wrapper .select-form option {
-  width: 100%;
+.select__form .select__form-item {
+  display: flex;
+  align-items: center;
+  gap: 337px;
 }
-.select-wrapper .arrow-select {
+.select__form .arrow-select {
   display: inline-flex;
   position: relative;
   width: 20px;
   height: 20px;
   background-color: rgb(189, 188, 188);
   border-radius: 50%;
-  margin-right: 17px;
+  margin-right: 20px;
 }
-.select-wrapper .arrow-select::before {
+.select__form .arrow-select::before {
   content: "";
   width: 4px;
   height: 4px;
@@ -592,6 +639,9 @@ details > summary {
   top: 5px;
   left: 7px;
   transform: rotate(135deg);
+}
+.select__form .arrow-select:hover {
+  transform: rotate(-180deg);
 }
 
 .burger-line_second, .burger-line_first, .header-burger::after, .header-burger:before {
@@ -618,7 +668,7 @@ details > summary {
   bottom: 0;
   left: 0;
 }
-@media (max-width: 380px) {
+@media (max-width: 765px) {
   .header-burger {
     display: block;
   }
@@ -642,6 +692,11 @@ details > summary {
 .header {
   padding: 2.9rem 0rem 6.2rem 2rem;
 }
+@media (max-width: 1200px) {
+  .header {
+    padding: 2.9rem 0;
+  }
+}
 
 .header__wrapper {
   display: flex;
@@ -651,6 +706,7 @@ details > summary {
 }
 @media (max-width: 1200px) {
   .header__wrapper {
+    justify-content: space-between;
     gap: 0;
   }
 }
@@ -663,15 +719,30 @@ details > summary {
     padding-left: 0;
   }
 }
+@media (max-width: 1200px) {
+  .service__table {
+    padding: 3.7rem 5px 65px 0;
+  }
+}
 
 .layout-3-column {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  row-gap: 45px;
+  row-gap: 38px;
 }
 .layout-3-column > * {
   flex-basis: 33%;
+}
+@media (max-width: 1200px) {
+  .layout-3-column {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .layout-3-column > * {
+    flex-basis: 31%;
+  }
 }
 
 .column__content-block {
@@ -690,6 +761,12 @@ details > summary {
 @media (max-width: 1435px) {
   .column__content-image {
     width: 290px;
+  }
+}
+@media (max-width: 1200px) {
+  .column__content-image {
+    width: 280px;
+    height: 350px;
   }
 }
 
@@ -721,7 +798,13 @@ details > summary {
   padding: 5px 3.1rem 3.6rem;
   gap: 1rem;
 }
-.column__content-info .column__content-subtitle {
+@media (max-width: 1200px) {
+  .column__content-info {
+    padding: 7px 3.4rem 2.4rem;
+  }
+}
+
+.column__content-subtitle {
   font-size: 1.9rem;
   font-weight: 700;
   line-height: 2rem;
@@ -729,22 +812,47 @@ details > summary {
   color: #E06733;
   padding-bottom: 4px;
 }
-.column__content-info .column__content-text {
+@media (max-width: 1200px) {
+  .column__content-subtitle {
+    font-size: 2rem;
+    margin-right: 10px;
+    padding-bottom: 3px;
+  }
+}
+
+.column__content-text {
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 1.7rem;
   font-style: normal;
   color: #717171;
 }
+@media (max-width: 1200px) {
+  .column__content-text {
+    font-size: 1.6rem;
+    text-align: center;
+    max-width: 210px;
+  }
+}
 
 .footer__wrapper {
   padding: 3.5rem 1.5rem 4rem 2rem;
+}
+@media (max-width: 1200px) {
+  .footer__wrapper {
+    padding: 18px 0 0;
+  }
 }
 
 .footer__items {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media (max-width: 1200px) {
+  .footer__items {
+    flex-direction: column;
+  }
 }
 
 .footer__student-info {
@@ -754,6 +862,11 @@ details > summary {
   font-style: normal;
   color: black;
 }
+@media (max-width: 1200px) {
+  .footer__student-info {
+    font-size: 2rem;
+  }
+}
 
 .students-contacts {
   display: flex;
@@ -761,6 +874,13 @@ details > summary {
   justify-content: space-between;
   gap: 20px;
   margin: 0;
+}
+@media (max-width: 1200px) {
+  .students-contacts {
+    padding: 0;
+    padding-right: 5px;
+    gap: 23px;
+  }
 }
 
 .rss-link, .student-link {
@@ -773,9 +893,24 @@ details > summary {
 .rss-link:hover, .student-link:hover {
   color: #E06733;
 }
+@media (max-width: 1200px) {
+  .rss-link, .student-link {
+    font-size: 2rem;
+  }
+}
+
+.footer__school-link {
+  margin-top: -10px;
+  padding: 0 5px 0 0;
+}
 
 .rss-link {
   padding-left: 5px;
+}
+@media (max-width: 1200px) {
+  .rss-link {
+    padding-left: 0;
+  }
 }
 
 .footer__contacts {
@@ -785,6 +920,13 @@ details > summary {
   gap: 15px;
   padding: 0;
   padding-right: 15px;
+}
+@media (max-width: 1200px) {
+  .footer__contacts {
+    padding-top: 3px;
+    padding-right: 5px;
+    gap: 20px;
+  }
 }
 
 .footer__contact {
@@ -811,6 +953,16 @@ details > summary {
 .header__nav {
   max-width: 452px;
 }
+@media (max-width: 1200px) {
+  .header__nav {
+    max-width: none;
+  }
+}
+@media (max-width: 765px) {
+  .header__nav {
+    display: none;
+  }
+}
 
 .nav-items {
   display: flex;
@@ -820,12 +972,23 @@ details > summary {
   padding-top: 4px;
   padding-left: 20px;
 }
+@media (max-width: 1200px) {
+  .nav-items {
+    padding-left: 0;
+    padding-right: 10px;
+  }
+}
 
 .nav-item {
   padding-right: 3.8rem;
 }
 .nav-item:last-child {
   padding-right: 0px;
+}
+@media (max-width: 1200px) {
+  .nav-item {
+    padding-right: 5rem;
+  }
 }
 
 .nav-link {
@@ -848,6 +1011,16 @@ details > summary {
 .welcome__content > * {
   flex-basis: 45%;
 }
+@media (max-width: 1200px) {
+  .welcome__content {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 50px;
+    padding: 25px 0 0;
+    max-height: 420px;
+    position: relative;
+  }
+}
 
 .welcome__background {
   height: 407.3px;
@@ -856,16 +1029,37 @@ details > summary {
   background-repeat: no-repeat;
   margin-left: 25px;
 }
+@media (max-width: 1200px) {
+  .welcome__background {
+    background: url("../assets/images/leafs_welcome_tablet.png");
+    background-repeat: no-repeat;
+    margin-left: 0;
+  }
+}
 
 .welcome__info {
   max-width: 54.9rem;
   padding: 65px 0px 20px 0px;
+}
+@media (max-width: 1200px) {
+  .welcome__info {
+    max-width: none;
+    padding: 15px 0 0;
+  }
 }
 
 .welcome__info-title {
   margin-top: -10px;
   font-size: 4.1rem;
   padding-bottom: 29px;
+}
+@media (max-width: 1200px) {
+  .welcome__info-title {
+    max-width: 341px;
+    font-size: 3.5rem;
+    margin: 0;
+    position: absolute;
+  }
 }
 .welcome__info-text {
   font-size: 1.8rem;
@@ -876,17 +1070,41 @@ details > summary {
   max-width: 490px;
   padding-bottom: 45px;
 }
+@media (max-width: 1200px) {
+  .welcome__info-text {
+    max-width: 340px;
+    padding-top: 130px;
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+    position: absolute;
+  }
+}
 
 .about__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 76px 0px 60px 0px;
+  padding: 74px 0px 60px 0px;
+}
+@media (max-width: 1200px) {
+  .about__content {
+    flex-direction: column;
+    max-height: 780px;
+    padding: 40px 0 0;
+  }
 }
 
 .about__info {
   max-width: 59.5rem;
   padding: 0px 0px 0px 58px;
+}
+@media (max-width: 1200px) {
+  .about__info {
+    max-width: none;
+    padding: 0;
+    text-align: center;
+    position: relative;
+  }
 }
 
 .about__info-title {
@@ -899,6 +1117,14 @@ details > summary {
 .about__info-title .heading-colored {
   color: #E06733;
 }
+@media (max-width: 1200px) {
+  .about__info-title {
+    margin-top: -5px;
+    margin-left: 100px;
+    font-size: 3.5rem;
+    position: absolute;
+  }
+}
 
 .about__info-text {
   font-size: 1.8rem;
@@ -909,6 +1135,13 @@ details > summary {
   padding-top: 10px;
   text-align: left;
 }
+@media (max-width: 1200px) {
+  .about__info-text {
+    padding-top: 140px;
+    font-size: 2rem;
+    line-height: 30px;
+  }
+}
 
 .about-image {
   height: 47.9rem;
@@ -916,28 +1149,63 @@ details > summary {
   background-image: url("../assets/images/houseplant.jpg");
   background-repeat: no-repeat;
 }
+@media (max-width: 1200px) {
+  .about-image {
+    background: url("../assets/images/houseplant_tablet.png");
+    background-repeat: no-repeat;
+    margin-top: 70px;
+    margin-left: 210px;
+  }
+}
 
 .service {
   background: #EDF2EC;
   padding: 3.5rem 9rem 10.5rem;
+}
+@media (max-width: 1200px) {
+  .service {
+    padding: 58px 0 0;
+  }
 }
 
 .service__content {
   display: flex;
   align-items: center;
 }
-.service__content .service__content-title {
+@media (max-width: 1200px) {
+  .service__content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.service__content-title {
   max-width: 30.6rem;
   font-size: 3.6rem;
   line-height: 4.9rem;
   padding-left: 10px;
 }
-.service__content .service__content-buttons {
+@media (max-width: 1200px) {
+  .service__content-title {
+    font-size: 3.5rem;
+    line-height: 4.8rem;
+    padding: 0;
+    margin-bottom: 40px;
+  }
+}
+
+.service__content-buttons {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 2.9rem;
   padding-left: 110px;
+}
+@media (max-width: 1200px) {
+  .service__content-buttons {
+    padding: 0;
+    gap: 3.8rem;
+  }
 }
 
 .prices__wrapper {
@@ -945,9 +1213,19 @@ details > summary {
   justify-content: space-between;
   padding: 3rem 0rem 9rem;
 }
+@media (max-width: 1200px) {
+  .prices__wrapper {
+    padding: 3.5rem 0 8.8rem;
+  }
+}
 
 .prices__rates {
   padding-left: 55px;
+}
+@media (max-width: 1200px) {
+  .prices__rates {
+    padding: 0;
+  }
 }
 
 .prices__contacts {
@@ -968,11 +1246,34 @@ details > summary {
   color: #000000;
   padding-right: 40px;
 }
+@media (max-width: 1200px) {
+  .prices__title {
+    padding-right: 0;
+    padding-left: 15px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .prices__title_subtitle {
+    font-size: 25px;
+    line-height: 35px;
+    padding-top: 105px;
+    padding-left: 0;
+    margin-left: 10px;
+    max-width: 296px;
+  }
+}
+
 .prices__contacts-info {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-left: 25rem;
+  margin-left: 60rem;
+}
+@media (max-width: 1200px) {
+  .prices__contacts-info {
+    margin-left: 15rem;
+  }
 }
 
 .contacts {
@@ -985,18 +1286,34 @@ details > summary {
   align-items: flex-start;
   padding: 53px 0px 0px 43px;
 }
+@media (max-width: 1200px) {
+  .contacts__wrapper {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 40px 0 0;
+    gap: 250px;
+  }
+}
 
 .contacts-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
-  padding-top: 4.5rem;
+  padding-top: 6.5rem;
   margin-left: 6rem;
 }
 @media (max-width: 1435px) {
   .contacts-content {
     margin-left: 0;
+  }
+}
+
+@media (max-width: 1200px) {
+  .contacts-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -1012,10 +1329,22 @@ details > summary {
     margin-left: 0;
   }
 }
+@media (max-width: 1200px) {
+  .contacts-title {
+    font-size: 4rem;
+  }
+}
 
 .contacts__image {
   width: 390px;
   height: 445px;
+}
+@media (max-width: 1200px) {
+  .contacts__image {
+    width: 200px;
+    height: 248px;
+    margin-left: 10px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
